# rise

./: .env.example  .gitignore  FINDINGS.md  README.md  Tariq.txt  download_data.py  pyproject.toml  requirements.txt  train_ast.qsub
all-samples/: inventory.csv  inventory.py  manifest.csv  manifest.py
all-samples/features/ast/: EXTRACTION_PLAN.md
all-samples/features/mert/: EXTRACTION_PLAN.md
all-samples/features/panns/: EXTRACTION_PLAN.md
all-samples/pipeline/: manifest_9.csv  norm_stats.json  pipeline_report.txt  splits.csv  windows.csv
artifacts/svm/: best_model.joblib  final_evaluation_status.json  final_model.joblib  test_confusion_matrix.csv  test_summary.json  validation_confusion_matrix.csv  validation_search.csv  validation_summary.json
configs/data/: philharmonia.yaml
configs/models/: medium_cnn.yaml  mert.yaml  svm.yaml
outputs/: metrics.json  multilabel_results.json  snr_results.json  timing.json
scc/: README.md  mert_probe.qsub
src/instrument_robustness/: __init__.py  ast_data.py  audio_demo.py  cnn_core.py  config.py  crnn_data.py  eval_panns_probe.py  extract_mert.py  featurelib.py  finalize_svm.py  mert_data.py  mert_probe.py  multilabel.py  noise_eval.py  prep_data.py  pretrained_extractors.py  progress_popup.py  step0_filter.py  step1_resample.py  step2_trim.py  step3_split.py  step4_window.py  step5_normalize.py  step6_stats.py  step7_featurize.py  svm_model.py  train.py  train_ast.py  train_mert.py  train_panns.py  train_svm.py  tune_experiment.py
src/instrument_robustness/multi/: train.py
tests/: test_mert.py  test_svm.py
(+4 files in other folders)
