[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "instrument-robustness"
version = "0.1.0"
description = "Instrument classification and noise-robustness study"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "mutagen>=1.45",   # MP3 header inspection — the bitrate/codec confound check
]

[tool.setuptools.packages.find]
where = ["src"]
